# window_automator

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json
examples/: CMakeLists.txt  example1.cpp
include/: input_common.hpp  keyboard.hpp  keyboard_utils.hpp  mouse.hpp  mouse_utils.hpp  window.hpp
libs/: CMakeLists.txt
src/: keyboard_utils.cpp  mouse_utils.cpp
